--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Calculator</title>
 </head>
 <body class=" bg-black d-flex align-items-center justify-content-center mx-auto">
-    <div class=" container-sm text-center">
+    <div class=" container text-center">
         <div><input class="wd text-white fs-1 text-end" placeholder="0" type="text"></div>
         <div class="row">
             <div class="col">
